--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "fallout-terminal-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.69.3",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.69.3"
   },
   "scripts": {
     "start": "react-scripts start",
